Correct how the Banner Slider navigation dots appear on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -11819,6 +11819,8 @@ footer a:hover {
 
 .tns-nav {
   position: absolute;
+  display: flex;
+  flex-wrap: nowrap;
   bottom: 20px;
   left: 50%;
   transform: translate(-50%, -50%);
