--- a/scss/partials/_banner-slider.scss
+++ b/scss/partials/_banner-slider.scss
@@ -39,6 +39,8 @@
 
 .tns-nav {
     position: absolute;
+    display: flex;
+    flex-wrap: nowrap;
     bottom: 20px;
     left: 50%;
     transform: translate(-50%, -50%);
